# ShareCloud-Hackathon-Project

./: pyproject.toml  readme.md  requirements.txt
app/: db.sqlite3  landpage.py
app/templates/: base.html  index.html  login.html  makepost.html  posts.html  public_profile.html  signup.html
