[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["AA nINJA <aryamannsheoran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-login = "^0.4.1"
flask-sqlalchemy = "^2.4"
werkzeug = "^2.2.3"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
